feat(pwa): enhance mobile PWA experience and add notification system
- Add mobile-specific CSS for PWA with touch optimizations
- Implement popup notification system with animations
- Update manifest and index.html for better PWA support
- Improve responsive design for modals and kanban board
- Replace old logos with new unified logo
- Add rounded corners for iOS-like design
- Optimize drag-and-drop for mobile devices

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ REACT_APP_SUPABASE_URL=https://your-project-id.supabase.co
 REACT_APP_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Configurações da aplicação
-REACT_APP_NAME=Kanban App
+REACT_APP_NAME=Tarefas Kanban
 REACT_APP_VERSION=1.0.0
 
 # Configurações de desenvolvimento
